--- a/style/generally.scss
+++ b/style/generally.scss
@@ -13,6 +13,11 @@ body {
   margin: 0 auto;
   text-align: center;
   position: relative;
+  border-bottom: 1px solid #dedede;
+  @include rwd(1200) {
+    width: 100%;
+    padding-top: 10px;
+  }
   a {
     img {
       margin-top: 10px;
@@ -26,6 +31,9 @@ body {
     top: 0;
     right: 0;
     display: flex;
+    @include rwd(768) {
+      display: none;
+    }
     p {
       padding-right: 5px;
       display: flex;
@@ -40,6 +48,9 @@ body {
     position: absolute;
     right: 0;
     bottom: 0;
+    @include rwd(768) {
+      display: none;
+    }
     .website,
     .checkout {
       width: 96px;
@@ -62,6 +73,126 @@ body {
       margin-left: 10px;
     }
   }
+  .language {
+    display: none;
+    @include rwd(768) {
+      width: 76px;
+      height: 28px;
+      margin: 30px 5px 5px 0;
+      display: flex;
+      position: absolute;
+      right: 90px;
+      bottom: 0;
+    }
+  }
+  .menu {
+    display: none;
+    @include rwd(768) {
+      width: 76px;
+      height: 28px;
+      display: block;
+      background: url(../img/online/menu.jpg) center center;
+      border: 1px solid #000000;
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      margin: 30px 5px 5px 0;
+      font-size: 13px;
+      line-height: 28px;
+    }
+  }
+}
+
+.menu_item {
+  display: none;
+  @include rwd(768) {
+    &.on {
+      display: block;
+    }
+    ul {
+      @keyframes ii {
+        from {
+          transform: translateX(-100%);
+        }
+        to {
+          transform: translateX(0);
+        }
+      }
+      animation: ii 0.5s;
+      li {
+        width: 100%;
+        padding: 10px 0;
+        text-align: center;
+        @keyframes aa {
+          from {
+            transform: translateY(-100%);
+          }
+          to {
+            transform: translateY(0);
+          }
+        }
+        .item_llst {
+          display: none;
+          padding: 10px 0;
+          p {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            animation: aa 0.5s forwards;
+            background-color: #97999b;
+            &:hover {
+              background-color: #a2d7f1;
+            }
+          }
+        }
+        &:hover {
+          .item_llst {
+            display: block;
+          }
+        }
+      }
+    }
+  }
+}
+
+.menu_coin {
+  width: 100%;
+  display: flex;
+  a {
+    width: 50%;
+    display: flex;
+    background-color: #97999b;
+    margin: 0 5px;
+  }
+  .website_item,
+  .checkout_item {
+    height: 60px;
+    width: 49%;
+    margin: 0 5px;
+    padding: 0 10px;
+    display: flex;
+    align-items: center;
+    line-height: 50px;
+    background-color: #97999b;
+    border-radius: 0;
+    img {
+      width: 18px;
+      height: 20px;
+    }
+    p {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      color: #fff;
+    }
+  }
+  .website_item {
+    p {
+      justify-content: start;
+      position: relative;
+      left: 80%;
+    }
+  }
 }
 
 // reservation_title
@@ -72,6 +203,9 @@ body {
     display: flex;
     justify-content: center;
     position: relative;
+    @include rwd(768) {
+      display: none;
+    }
     li {
       padding: 10px 0;
       height: 60px;
@@ -82,7 +216,7 @@ body {
         .instruction_rooms,
         .membership_us {
           display: flex;
-          a{
+          a {
             height: 100%;
           }
           p {
@@ -173,12 +307,21 @@ body {
   margin: 0 auto;
   display: flex;
   padding-bottom: 100px;
+  @include rwd(968) {
+    width: 1000px;
+  }
+  @include rwd(665) {
+    width: 840px;
+  }
   // reservation_left_box
   .reservation_left_box {
     padding-right: 170px;
+    @include rwd(1200) {
+      padding-right: 0;
+    }
     .reservation_left_box_title {
       .title {
-        padding-top: 80px;
+        margin-top: 80px;
         font-size: 12px;
       }
     }
@@ -188,6 +331,14 @@ body {
       padding: 10px 0 20px;
       margin-top: 20px;
       position: relative;
+      z-index: 2;
+      @include rwd(1200) {
+        transform: translateX(-100%);
+        transition: all 0.5s;
+        &:hover {
+          transform: translateX(0);
+        }
+      }
       .generally_reserve,
       .offer {
         padding-bottom: 10px;
@@ -251,6 +402,13 @@ body {
       border-radius: 0 10px 10px 0;
       background-color: #97999b;
       color: #fff;
+      @include rwd(1200) {
+        &:hover {
+          .reservation_item {
+            transform: translateX(0);
+          }
+        }
+      }
       p {
         font-size: 24px;
         font-weight: bolder;
@@ -260,41 +418,60 @@ body {
   }
   // reservation_right_box
   .reservation_right_box {
-    padding-top: 100px;
+    margin-top: 120px;
+    @include rwd(1200) {
+      transform: translateX(-25%);
+      margin-left: 0;
+    }
+    @include rwd(968) {
+      transform: translateX(-30%);
+    }
+    @include rwd(667) {
+      transform: translateX(-37%);
+    }
     .reservation_right_item {
-        display: flex;
-        flex-wrap: wrap;
+      display: flex;
+      flex-wrap: wrap;
       .room_list {
         width: 340px;
         padding: 40px 5px;
         margin-bottom: 20px;
         background-color: #eee;
         position: relative;
-        h2{
-            padding: 20px 0;
-            font-weight: bolder;
+        @include rwd(968) {
+          width: 300px;
         }
-        h4{
-            color: #D80000;
-            font-weight: bolder;
+        h2 {
+          padding: 20px 0;
+          font-weight: bolder;
         }
-        li{
-            list-style: none;
+        h4 {
+          color: #d80000;
+          font-weight: bolder;
         }
-        &:nth-child(even){
-            margin-left: 70px;
+        li {
+          list-style: none;
         }
-        .rooms_item{
-            display: flex;
-            flex-direction: column;
-            position: absolute;
-            right: 10px;
-            bottom: 20px;
-            a{
-                padding:5px 20px ;
-                font-size: 14px;
-                border: 1px solid #000;
-            }
+        &:nth-child(even) {
+          margin-left: 70px;
+          @include rwd(968) {
+            margin-left: 20px;
+          }
+          @include rwd(665) {
+            margin-left: 0;
+          }
+        }
+        .rooms_item {
+          display: flex;
+          flex-direction: column;
+          position: absolute;
+          right: 10px;
+          bottom: 20px;
+          a {
+            padding: 5px 20px;
+            font-size: 14px;
+            border: 1px solid #000;
+          }
         }
       }
     }
@@ -329,6 +506,7 @@ body {
     }
   }
 }
+
 .go_top {
   margin-top: 5px;
   padding: 10px 0;
@@ -340,6 +518,7 @@ body {
     display: block;
   }
 }
+
 // safe_ad
 .safe_ad {
   width: 30%;
@@ -355,6 +534,13 @@ body {
   text-align: center;
   z-index: 2;
   display: block;
+  @include rwd(1024) {
+    width: 70%;
+    height: 92%;
+    margin: 0 auto;
+    top: 2%;
+    left: 15%;
+  }
   &.on {
     display: block;
   }
@@ -415,6 +601,7 @@ body {
   left: 0;
   background-color: #000;
   opacity: 0.5;
+  z-index: 2;
   // display: none;
   &.on {
     display: block;
