--- a/style/online.scss
+++ b/style/online.scss
@@ -14,6 +14,11 @@ body {
   margin: 0 auto;
   text-align: center;
   position: relative;
+  border-bottom: 1px solid #dedede;
+  @include rwd(1200) {
+    width: 100%;
+    padding-top: 10px;
+  }
   a {
     img {
       margin-top: 10px;
@@ -27,6 +32,9 @@ body {
     top: 0;
     right: 0;
     display: flex;
+    @include rwd(768) {
+      display: none;
+    }
     p {
       padding-right: 5px;
       display: flex;
@@ -41,6 +49,9 @@ body {
     position: absolute;
     right: 0;
     bottom: 0;
+    @include rwd(768) {
+      display: none;
+    }
     .website,
     .checkout {
       width: 96px;
@@ -61,6 +72,126 @@ body {
     }
     .checkout {
       margin-left: 10px;
+    }
+  }
+  .language {
+    display: none;
+    @include rwd(768) {
+      width: 76px;
+      height: 28px;
+      margin: 30px 5px 5px 0;
+      display: flex;
+      position: absolute;
+      right: 90px;
+      bottom: 0;
+    }
+  }
+  .menu {
+    display: none;
+    @include rwd(768) {
+      width: 76px;
+      height: 28px;
+      display: block;
+      background: url(../img/online/menu.jpg) center center;
+      border: 1px solid #000000;
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      margin: 30px 5px 5px 0;
+      font-size: 13px;
+      line-height: 28px;
+    }
+  }
+}
+
+.menu_item {
+  display: none;
+  @include rwd(768) {
+    &.on {
+      display: block;
+    }
+    ul {
+      @keyframes ii {
+        from {
+          transform: translateX(-100%);
+        }
+        to {
+          transform: translateX(0);
+        }
+      }
+      animation: ii 0.5s;
+      li {
+        width: 100%;
+        padding: 10px 0;
+        text-align: center;
+        @keyframes aa {
+          from {
+            transform: translateY(-100%);
+          }
+          to {
+            transform: translateY(0);
+          }
+        }
+        .item_llst {
+          display: none;
+          padding: 10px 0;
+          p {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            animation: aa 0.5s forwards;
+            background-color: #97999b;
+            &:hover {
+              background-color: #A2D7F1;
+            }
+          }
+        }
+        &:hover {
+          .item_llst {
+            display: block;
+          }
+        }
+      }
+    }
+  }
+}
+
+.menu_coin {
+  width: 100%;
+  display: flex;
+  a {
+    width: 50%;
+    display: flex;
+    background-color: #97999b;
+    margin: 0 5px;
+  }
+  .website_item,
+  .checkout_item {
+    height: 60px;
+    width: 49%;
+    margin: 0 5px;
+    padding: 0 10px;
+    display: flex;
+    align-items: center;
+    line-height: 50px;
+    background-color: #97999b;
+    border-radius: 0;
+    img {
+      width: 18px;
+      height: 20px;
+    }
+    p {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      color: #fff;
+    }
+  }
+  .website_item {
+    p {
+      justify-content: start;
+      position: relative;
+      left: 80%;
     }
   }
 }
@@ -342,10 +473,24 @@ body {
   .fc-button-primary:focus {
     box-shadow: none;
   }
-  .fc-day{
+  .fc-daygrid-day{
     &:hover{
       background: #C0E1FA;
     }
+  }
+  .fc-scrollgrid-section-header{
+    background: #8a8989;
+    color: #fff;
+    &:hover{
+      background: #8a8989;
+    }
+  }
+  .fc-scrollgrid-sync-inner{
+    padding: 5px 0;
+  }
+  .fc-daygrid-day-events{
+    display: flex;
+    justify-content: center;
   }
 }
 
